# osm-router-rs

./: Cargo.toml  README.md  travis.yml
src/: config.rs  edges.rs  lib.rs  restriction.rs
src/old/: config.ts  edges.test.ts  edges.ts  parse.test.ts  parse.ts  plan.test.ts  plan.ts  restriction.test.ts  restriction.ts  router.test.ts  router.ts  sequence.test.ts  sequence.ts  serviceWorker.js  tile.test.ts  tile.ts  types.ts
src/old/__mocks__/: index.ts
