[package]
name = "osm_router"
version = "1.0.0"
authors = ["Jason Abbott <you@example.com>"]
edition = "2018"
license = "MIT"
homepage = ""
repository = ""
readme = "README.md"

[dependencies]
hashbrown = { version = "0.7", features = ["serde"] }
lazy_static = "1"
maplit = "1"
ron = "0.5.1"
regex = { version = "1" } #, features = ["pattern"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4"
osm_models = { git = "https://github.com/toba/osm-models-rs.git" }